--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -17,14 +17,16 @@
   "dependencies": {
     "@strapi/plugin-cloud": "5.16.0",
     "@strapi/plugin-users-permissions": "5.16.0",
+    "@strapi/provider-email-sendgrid": "^5.16.1",
     "@strapi/strapi": "5.16.0",
     "better-sqlite3": "11.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.0.0",
+    "strapi-provider-email-nodemailer": "^2.0.0",
+    "strapi-provider-email-sendgrid": "^3.1.4",
     "styled-components": "^6.0.0"
   },
-  "devDependencies": {},
   "engines": {
     "node": ">=18.0.0 <=22.x.x",
     "npm": ">=6.0.0"
