--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -8,15 +8,16 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-     "build:css": "tailwindcss build src/styles/index.css -o src/styles/tailwind.css"
-    
+    "build:css": "tailwindcss build src/styles/index.css -o src/styles/tailwind.css"
   },
-  
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.11.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
+    "tw-elements": "^2.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -30,7 +31,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.10",
+    "tailwindcss": "^4.1.11",
     "vite": "^6.3.5"
   }
 }
