--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -10,16 +10,43 @@
     "preview": "vite preview",
     "build:css": "tailwindcss build src/styles/index.css -o src/styles/tailwind.css"
   },
+  
   "dependencies": {
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
+
+    "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.10",
+
+  
+    "@tiptap/extension-link": "^2.22.3",
+    "@tiptap/pm": "^2.22.3",
+    "@tiptap/react": "^2.22.3",
+    "@tiptap/starter-kit": "^2.22.3",
+
+    
+    "dayjs": "^1.11.13",
+    "uuid": "^11.1.0",
+
+    
+    "embla-carousel": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
+
+    
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.8",
+    "tw-elements": "^2.0.0",
+
+    
+    "recharts": "^2.15.4",
+
+    
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
-    "tw-elements": "^2.0.0",
-    "uuid": "^11.1.0"
-  },
+    "vite": "^6.3.5"
+  }
+,
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
@@ -31,6 +58,8 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "postcss": "^8.5.6",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^4.1.11",
     "vite": "^6.3.5"
   }
