--- a/FRONTEND/package.json
+++ b/FRONTEND/package.json
@@ -37,6 +37,7 @@
     "axios": "^1.10.0",
     "dayjs": "^1.11.13",
     "embla-carousel": "^8.5.2",
+    "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.11.8",
