update .env example to include database parameters

--- a/BACKEND/.env.local.example
+++ b/BACKEND/.env.local.example
@@ -10,6 +10,18 @@ ADMIN_JWT_SECRET=tobemodified
 TRANSFER_TOKEN_SALT=tobemodified
 ENCRYPTION_KEY=tobemodified
 
+# Database
+DATABASE_URL=tobemodified
+DATABASE_CLIENT=tobemodified
+DATABASE_HOST=tobemodified
+DATABASE_PORT=
+DATABASE_NAME=tobemodified
+DATABASE_USERNAME=tobemodified
+DATABASE_PASSWORD=tobemodified
+DATABASE_SSL=false
+DATABASE_FILENAME=.tmp/data.db
+JWT_SECRET=u9YCyl09LsXJIczB4DkJ6w==
+
 SENDGRID_HOST=tobemodified
 SENDGRID_API_KEY=tobemodified
 SENDGRID_DEFAULT_FROM=tobemodified
