--- a/BACKEND/.env.local.example
+++ b/BACKEND/.env.local.example
@@ -26,3 +26,9 @@ SENDGRID_HOST=tobemodified
 SENDGRID_API_KEY=tobemodified
 SENDGRID_DEFAULT_FROM=tobemodified
 SENDGRID_DEFAULT_FROM=tobemodified
+
+# Cloud storage service
+CLOUDINARY_URL=cloudinary://<your_api_key>:<your_api_secret>@<cloudinary_name>
+CLOUDINARY_NAME=your_cloudinary_name
+CLOUDINARY_KEY=your_api_key
+CLOUDINARY_SECRET=your_api_secret
