--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -19,6 +19,7 @@
     "@strapi/plugin-cloud": "5.16.0",
     "@strapi/plugin-users-permissions": "5.16.0",
     "@strapi/provider-email-sendgrid": "^5.16.1",
+    "@strapi/provider-upload-cloudinary": "^5.19.0",
     "@strapi/strapi": "5.16.0",
     "better-sqlite3": "11.3.0",
     "pg": "^8.16.3",
